[package]
name = "openapi-lint"
description = "Validate an OpenAPI schema against some rules"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/openapi-lint/"
readme = "README.md"
keywords = ["openapi"]
categories = ["web-programming::http-server"]

[dependencies]
heck = "0.5.0"
indexmap = "2.0.0"
lazy_static = "1.4.0"
openapiv3 = "2.0.0"
regex = "1.7.3"

[dev-dependencies]
expectorate = "1.0"
serde_json = "1.0"
